syntax = "proto3";
package cosmos.crisis;

option go_package = "github.com/cosmos/cosmos-sdk/x/crisis/types";

import "gogoproto/gogo.proto";
import "cosmos/cosmos.proto";

// GenesisState - genesis state of x/crisis
message GenesisState {
	cosmos.Coin constant_fee = 3 [
	  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
	  (gogoproto.nullable) = false,
	  (gogoproto.moretags) = "yaml:\"constant_fee\""
	];
}
